Fix Item component appearance on mobile

--- a/src/components/Item/Item.module.scss
+++ b/src/components/Item/Item.module.scss
@@ -3,7 +3,7 @@
 
 .container {
   display: grid;
-  grid-template-rows: 1.5fr 1fr;
+  grid-template-rows: 1fr 1fr;
   width: calc(100% - 2rem);
   padding: 1rem;
   flex-grow: 1;
@@ -48,6 +48,8 @@
   transform-style: preserve-3d;
   perspective: 90px;
   transform: rotateZ(8deg);
+  margin: 1rem;
+  margin-top: 3rem;
 }
 
 .priceText {
@@ -76,5 +78,10 @@
 
   .priceAndBook {
     @include mixins.flexAround(row);
+  }
+
+  .priceTag {
+    margin: 0;
+    margin-top: 0;
   }
 }
